Dado Mentiroso, Errores y Ruleta
-Terminado la primera versión del dado mentiroso
-Corregidos errores del BlackJack y las Carrera de Caballos
-Empezada la ruleta de la suerte

--- a/juegos/caballos.html
+++ b/juegos/caballos.html
@@ -120,7 +120,7 @@
             font-size: 16px;
             border-radius: 5px;
         }
-        .caballo1, .caballo2, .caballo3 {
+        .caballo1 , .caballo2 , .caballo3 {
             width: 50px;
             height: 50px;
             top: 0;
@@ -191,7 +191,7 @@
             </button>
         </div>
         <div class="betting-area">
-            <input type="number" id="bet-amount" placeholder="Apuesta">
+            <input type="number" id="bet-amount" placeholder="Apuesta" min="0">
             <button id="bet-button">Apostar</button>
         </div>
         <button id="start-race">Iniciar Carrera</button>
