--- a/juegos/banco.html
+++ b/juegos/banco.html
@@ -132,6 +132,7 @@
     </div>
 
     <script src="../scripts/tratamientoJSON.js"></script>
+    <script src="../scripts/Jugador.js"></script>
     <script src="../scripts/Banco.js"></script>
 </body>
 </html>
