--- a/juegos/blackjack.html
+++ b/juegos/blackjack.html
@@ -143,6 +143,7 @@
     </div>
 
     <script src="..\scripts\tratamientoJSON.js"></script>
+    <script src="../scripts/Jugador.js"></script>
     <script src="..\scripts\Baraja.js"></script>
     <script src="..\scripts\Blackjack.js"></script>
 </body>
