--- a/juegos/dadomentiroso.html
+++ b/juegos/dadomentiroso.html
@@ -104,6 +104,7 @@
     </div>
 
     <script src="../scripts/tratamientoJSON.js"></script>
+    <script src="../scripts/Jugador.js"></script>
     <script src="../scripts/DadoMentiroso.js"></script>
 </body>
 </html>
