--- a/juegos/caballos.html
+++ b/juegos/caballos.html
@@ -199,6 +199,7 @@
     </div>
 
     <script src="../scripts/tratamientoJSON.js"></script>
+    <script src="../scripts/Jugador.js"></script>
     <script src="..\scripts\Caballos.js"></script>
 </body>
 </html>
