--- a/juegos/ruleta.html
+++ b/juegos/ruleta.html
@@ -42,45 +42,94 @@
             top: 20px;
         }
         button {
-            margin-top: 20px;
             padding: 10px 20px;
             font-size: 16px;
+            color: #fff;
+            background-color: #4CAF50;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.5s;
+        }
+        button:hover {
+            background-color: #2c6b2f;
+        }
+        button:disabled{
+            background-color: #295d2b;
+            cursor: auto;
+        }
+        /* Estilos para los cuadrados de colores */
+        .color-squares-container {
+            display: flex;
+            justify-content: center; /* Centra los cuadrados horizontalmente */
+            margin-top: 20px; /* Añade espacio arriba */
+        }
+        .color-square {
+            width: 50px;
+            height: 50px;
+            margin: 0 5px; /* Espacio entre los cuadrados */
+            border: 1px solid #ccc; /* Borde para que se vean */
             cursor: pointer;
         }
+        .red {
+            background-color: red;
+            transition: background-color 0.6s;
+        }
+        .green {
+            background-color: green;
+            transition: background-color 0.6s;
+        }
+        .blue {
+            background-color: blue;
+            transition: background-color 0.6s;
+        }
+        .yellow {
+            background-color: yellow;
+            transition: background-color 0.6s;
+        }
+        .betting-area {
+            margin: 20px 0;
+        }
+        input[type="number"] {
+            width: 100px;
+            padding: 5px;
+            margin: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            text-align: center;
+            transition: box-shadow 0.2s;
+        }
+
+        input[type="number"]:hover{
+            box-shadow: 0px 0px 3px 4px #9c9c9c;
+        }
     </style>
+    <link rel="stylesheet" href="..\volver.css">
 </head>
 <body>
+    <button id="volver">Volver</button>
     <h1>Ruleta de la Suerte</h1>
+    <h3 id="tituloJugador"></h3>
     <div id="pointer"></div>
     <div id="wheel"></div>
-    <button onclick="spinWheel()">Girar la Ruleta</button>
+    <button id="girar">Girar la Ruleta</button>
     <p id="result"></p>
 
-    <script>
-        function spinWheel() {
-            const wheel = document.getElementById('wheel');
-            const result = document.getElementById('result');
-            const randomDegree = Math.floor(Math.random() * 360);
-            const sectors = ['Rojo', 'Verde', 'Azul', 'Amarillo'];
-            const adjustedDegree = (randomDegree + 90) % 360;
-            var sectorIndex = Math.floor(adjustedDegree / 90);
+    <!-- Contenedor para los cuadrados de colores -->
+    <div class="color-squares-container">
+        <div class="color-square red" id="red"></div>
+        <div class="color-square green" id="green"></div>
+        <div class="color-square blue" id="blue"></div>
+        <div class="color-square yellow" id="yellow"></div>
+        <button id="resetear">resetear</button>
+    </div>
+    <div class="betting-area">
+        <input type="number" id="bet-amount" placeholder="Apuesta" min="0">
+        <button id="bet-button">Apostar</button>
+    </div>
 
-            console.log(wheel.style.transform);
-            if(sectorIndex == 1){
-                sectorIndex = 3
-            }else if(sectorIndex == 3){
-                sectorIndex = 1
-            }
-
-            wheel.style.transition = 'transform 3s ease-out';
-            wheel.style.transform = `rotate(${3600+randomDegree}deg)`;
-
-            setTimeout(() => {
-                result.textContent = `¡Cayó en ${sectors[sectorIndex]}!`;
-                wheel.style.transition = 'none';
-                wheel.style.transform = `rotate(${randomDegree}deg)`;
-            }, 3000);
-        }
-    </script>
+    <script src="../scripts/tratamientoJSON.js"></script>
+    <script src="../scripts/Jugador.js"></script>
+    <script src="../scripts/Ruleta.js"></script>
 </body>
 </html>
