--- a/index.html
+++ b/index.html
@@ -17,6 +17,25 @@
             background-color: rgb(35, 34, 34);
             color: white;
         }
+        button {
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+            transition: background-color 0.2s;
+        }
+
+        button:hover {
+            background-color: #295d2b;
+        }
+
+        button:disabled{
+            background-color: #295d2b;
+            cursor: auto;
+        }
 
         .container {
             text-align: center;
@@ -81,8 +100,10 @@
             
         }
     </style>
+    <link rel="stylesheet" href="volver.css">
 </head>
 <body>
+    <button id="volver">Reiniciar</button>
     <div class="container">
         <div class="user-info">
             Saldo: <span id="balance">100</span> FICHAS
